--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>24-Day-23---Kinetic-CSS-Loader.git</title>
 </head>
 <body>
+    <div class="kinetic"></div>
     
+    <script src="script.js"></script>
 </body>
 </html>
